Updated to use getDeclaredConstructor()